# gamenastix-biomodel

./: CMakeLists.txt  Doxyfile  README.md
doxygen-overlay/: MainPage.md
include/: Frame.cpp  Frame.h  Mode.cpp  Mode.h  Node.cpp  Node.h  Parser.cpp  Parser.h  Part.cpp  Part.h  SafeSscanf.h  Type.cpp  Type.h
include/deepModel/: Bio4.h  Medium.h  Model.h  Node.h  Treadmill.h
include/flatModel/: Bio4.h  Bio8.h  Medium.h  Model.h  RigidHuman.h  Treadmill.h
include/layout/: Bone.h  Joint.h
include/segment/: BodySegment.h  CyborgSegment.h  PeripheralSegment.h  Segment.h
source/: CMakeLists.txt  parser.cc  sample.h
test/: DeepModelTest.cpp  FlatModelTest.cpp  SegmentTest.cpp  googletest  template_test.cpp
