cmake_minimum_required(VERSION 3.0)
project(treadmill-t2-biomodel CXX)
set(CMAKE_CXX_STANDARD 17)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/test)

file(GLOB_RECURSE sources include/**.cpp)
file(GLOB_RECURSE headers include/**.h)

MACRO(COLLECT_CC current_path)
    MESSAGE("-- CollectCC -- Searching for cc-files in ${current_path}")
    FILE(GLOB children RELATIVE ${current_path} ${current_path}/*)
    FOREACH(child ${children})
        IF(IS_DIRECTORY ${current_path}/${child})
            IF("${child}" STREQUAL ".git")
                MESSAGE("-- CollectCC -- Skipping .git directory")
            ELSEIF("${child}" STREQUAL ".idea")
                MESSAGE("-- CollectCC -- Skipping .idea directory")
            ELSEIF("${child}" STREQUAL "build")
                MESSAGE("-- CollectCC -- Skipping build directory")
            ELSE()
                COLLECT_CC(${current_path}/${child})
            ENDIF()
        ELSE ()
            GET_FILENAME_COMPONENT(test_ext ${current_path}/${child} EXT)
            GET_FILENAME_COMPONENT(test_name ${current_path}/${child} NAME_WE)
            IF ("${test_ext}" STREQUAL ".cpp")
                ADD_EXECUTABLE(${test_name} ${current_path}/${child} ${headers})
                TARGET_LINK_LIBRARIES(${test_name} gtest pthread)
                MESSAGE("-- CollectCC -- Adding executable ${test_name} - done")
            ENDIF ()
        ENDIF()
    ENDFOREACH()
    MESSAGE("-- CollectCC -- Searching for cc-files in ${current_path} - done")
ENDMACRO()


COLLECT_CC(${CMAKE_CURRENT_SOURCE_DIR}/test)

